--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
+    - name: GITHUB_SHA
+      run: echo ${GITHUB_SHA}
+      
     - name: Run docker build
       run: docker build --tag ${{ env.registry }}/${{ env.image_name }}:$GITHUB_SHA .
       
