--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
 
 personal.settings.time=Europe/Berlin
+spring.security.user.name=foo
+spring.security.user.password=foo
