--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mydb?useUnicode=true&characterEncoding=utf8&serverTimezone=Europe/Berlin
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/comppress?useUnicode=true&characterEncoding=utf8&serverTimezone=Europe/Berlin
 spring.datasource.username=root
 spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.maximum-pool-size=20
 
-# https://www.youtube.com/watch?v=lGrcZsw-hKQ
 logging.level.root=INFO
-logging.level.org.example=TRACE
 
 spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
