--- a/pom.xml
+++ b/pom.xml
@@ -87,4 +87,16 @@
             <version>4.5.10</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <finalName>newscollector</finalName>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
