--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <finalName>newscollector</finalName>
+                    <finalName>${artifactId}</finalName>
                 </configuration>
             </plugin>
         </plugins>
