--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,25 @@
         <version>2.2.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.comppress</groupId>
+    <groupId>org.example</groupId>
     <artifactId>newscollector</artifactId>
-    <version>1.0.0</version>
-    <name>newscollector</name>
+
+    <!-- Tag for the Docker Image here
+    Given a version number MAJOR.MINOR.PATCH, increment the:
+
+    MAJOR version when you make incompatible API changes,
+    MINOR version when you add functionality in a backwards compatible manner, and
+    PATCH version when you make backwards compatible bug fixes.
+    -->
+    <version>1.3.0-SNAPSHOT</version>
+    <name>NewsCollector</name>
     <packaging>jar</packaging>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
+        <docker.user>lucas</docker.user>
+        <docker.password>gmwmp6AWCcCtXTyx</docker.password>
+        <docker.url>registry.comppress.de</docker.url>
         <start-class>org.example.NewsCollector.NewsCollectorApplication</start-class>
     </properties>
 
@@ -68,7 +80,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
+        <!--
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jasper</artifactId>
+            <version>9.0.22</version>
+        </dependency>
+        -->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -86,17 +106,42 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.10</version>
         </dependency>
+
     </dependencies>
+
     <build>
+        <finalName>${artifactId}</finalName>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <!-- https://www.baeldung.com/jib-dockerizing -->
+            <!-- Run 'mvn compile jib:build' to execute -->
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>2.7.1</version>
                 <configuration>
-                    <finalName>${artifactId}</finalName>
+                    <from>
+                        <image>openjdk:14-jdk-alpine</image>
+                    </from>
+                    <to>
+                        <image>registry.comppress.de/newscollector:${project.version}</image>
+                    </to>
+
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
-
 </project>
