--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <groupId>org.comppress</groupId>
     <artifactId>NewsCollector</artifactId>
 
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>NewsCollector</name>
     <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
